--- a/src/app/pages/admin/managment-user/managment-user.component.html
+++ b/src/app/pages/admin/managment-user/managment-user.component.html
@@ -79,8 +79,12 @@
                 <td *ngIf="user._blocked" class="text-center" style="color: red;">{{"Blocked" | translate}}</td>
 
                 <td class="text-center">
-                  <a *ngIf="!user._blocked" (click)="onBlockClick(user)" title="block" class="reject-btn  mx-2"><i class="uil uil-times"></i>{{"block" | translate}}</a>
-                  <a *ngIf="user._blocked" (click)="onUnblockClick(user)" title="Unblock" class="accept-btn mx-2"><i class="uil uil-check"></i>{{"Unblock" | translate}}</a>
+                  <a *ngIf="!user._blocked" (click)="onBlockClick(user)" title="Block" class="reject-btn noborder  mx-2"><i class="uil uil-times"></i></a>
+                  <a *ngIf="user._blocked" (click)="onUnblockClick(user)" title="Unblock" class="accept-btn noborder mx-2"><i class="uil uil-check"></i></a>
+                  <a  title="Reset Password" class="gray-s"><i class="icon-resetPassword"></i></a>
+                  <a  title="Reset Device Student " class="gray-s"><i class="icon-resetDevice"></i></a>
+                  <a (click)="onEditClick()" title="Edit" class="gray-s"><i class="uil uil-edit-alt"></i></a>
+
                 </td>
               </tr>
 
