--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -25,7 +25,7 @@
           </ul>
           <ul class="navbar-nav" *ngIf="_auth.isLoggedIn">
             <li (click)="goToDashboard()" class="nav-item"><a
-                class="navbar-btn btn btn-primary">{{"My Dashboard" | translate}}</a>
+                class="navbar-btn btn Dassh btn-primary">{{"My Dashboard" | translate}}</a>
             </li>
           </ul>
         </div>
