--- a/src/app/pages/user/user-all-courses/user-all-courses.component.html
+++ b/src/app/pages/user/user-all-courses/user-all-courses.component.html
@@ -113,7 +113,7 @@
                         </div>
                     </div>
                 </div>
-
+                <h2 *ngIf="approvedCoursesArray.length <= 0 && !loading">{{"No Results Found" | translate}}</h2>
             </div>
 
         </div>
