--- a/src/app/pages/admin/managment-user/managment-user.component.html
+++ b/src/app/pages/admin/managment-user/managment-user.component.html
@@ -84,7 +84,18 @@
                   <a  title="Reset Password" class="gray-s"><i class="icon-resetPassword"></i></a>
                   <a  title="Reset Device Student " class="gray-s"><i class="icon-resetDevice"></i></a>
                   <a (click)="onEditClick()" title="Edit" class="gray-s"><i class="uil uil-edit-alt"></i></a>
-
+                 <a >
+                    <label class="switch togglebuttn">
+                    <input type="checkbox" >
+                    <span class="slider round"></span>
+                  </label>
+                  </a>
+                 <a >
+                    <label class="switch togglebuttn">
+                    <input type="checkbox" checked>
+                    <span class="slider round"></span>
+                  </label>
+                  </a>
                 </td>
               </tr>
 
