--- a/src/app/pages/user/user-all-courses/user-all-courses.component.html
+++ b/src/app/pages/user/user-all-courses/user-all-courses.component.html
@@ -21,25 +21,27 @@
 
             </div>
         </div>
-        <h5 class="icon-filter" (click)="onSearchClick()">filter</h5>
+        <h5 class="icon-filter" (click)="onSearchClick()">{{"Filter"|translate}}</h5>
         <div class="filter showFilter">
           <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
             <li class="nav-item">
-              <a class="nav-link " id="pills-grade-tab" data-toggle="pill" href="#pills-grade" role="tab" aria-controls="pills-grade" aria-selected="true">{{"grade"|translate}}</a>
+              <a class="nav-link" id="pills-lang-tab" data-toggle="pill" href="#pills-lang" role="tab" aria-controls="pills-lang" aria-selected="false">{{"Language"|translate}}</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" id="pills-lang-tab" data-toggle="pill" href="#pills-lang" role="tab" aria-controls="pills-lang" aria-selected="false">{{"language"|translate}}</a>
+              <a class="nav-link " id="pills-grade-tab" data-toggle="pill" href="#pills-grade" role="tab" aria-controls="pills-grade" aria-selected="true">{{"Grade"|translate}}</a>
             </li>
           </ul>
           <div class="tab-content" id="pills-tabContent">
-            <div class="tab-pane fade " id="pills-grade" role="tabpanel" aria-labelledby="pills-grade-tab">
-              <label class="radio-inline"><input type="radio" name="optradio" checked>{{"first"|translate}}</label>
-              <label class="radio-inline"><input type="radio" name="optradio">{{"Second"|translate}}</label>
+            <div class="tab-pane fade active show" id="pills-lang" role="tabpanel" aria-labelledby="pills-lang-tab">
+              <label class="radio-inline"><input type="radio" name="optradio" checked>{{"Both"|translate}}</label>
+              <label class="radio-inline"><input type="radio" name="optradio" >{{"English"|translate}}</label>
+              <label class="radio-inline"><input type="radio" name="optradio">{{"Arabic"|translate}}</label>
             </div>
-            <div class="tab-pane fade" id="pills-lang" role="tabpanel" aria-labelledby="pills-lang-tab">
-              <label class="radio-inline"><input type="radio" name="optradio" checked>{{"English"|translate}}</label>
-              <label class="radio-inline"><input type="radio" name="optradio">{{"arabic"|translate}}</label>
-              <label class="radio-inline"><input type="radio" name="optradio">{{"both"|translate}}</label>
+            <div class="tab-pane fade " id="pills-grade" role="tabpanel" aria-labelledby="pills-grade-tab">
+              <label class="radio-inline"><input type="radio" name="optradio" >{{"All"|translate}}</label>
+              <label class="radio-inline"><input type="radio" name="optradio" >{{"First"|translate}}</label>
+              <label class="radio-inline"><input type="radio" name="optradio">{{"Second"|translate}}</label>
+              <label class="radio-inline"><input type="radio" name="optradio">{{"Third"|translate}}</label>
             </div>
           </div>
         </div>
