--- a/src/app/pages/user/user-study-course/user-study-course.component.html
+++ b/src/app/pages/user/user-study-course/user-study-course.component.html
@@ -52,7 +52,7 @@
   <div class="row">
     <div class="col-lg-12 video">
       <div class="video-player-container">
-        <video width="100%" controls>
+        <video [hidden]="showPlayer" width="100%" controls>
           <source src="mov_bbb.mp4" type="video/mp4">
           <source src="mov_bbb.ogg" type="video/ogg">
           <!-- <source src="mov_bbb.ogg" type="video/ogg"> -->
