--- a/src/app/pages/user/user-all-courses/user-all-courses.component.html
+++ b/src/app/pages/user/user-all-courses/user-all-courses.component.html
@@ -5,9 +5,9 @@
                 <h2 class="st_title"><i class="uil uil-apps"></i> {{ 'All Courses' | translate}}</h2>
 
                 <form [formGroup]="searchForm" class="StudentSearch">
-                    <input formControlName="course_name" class="col-6 col-sm-3 form-control" type="text"
+                    <input formControlName="course_name" class="col-5 col-md-3 form-control" type="text"
                         placeholder="{{'Course Name'|translate}}" aria-label="Search">
-                    <input formControlName="instructor_name" class="col-6 col-sm-3 form-control" type="text"
+                    <input formControlName="instructor_name" class="col-5 col-md-3 form-control" type="text"
                         placeholder="{{'Instructor Name'|translate}}" aria-label="Search">
 
 
@@ -18,7 +18,7 @@
         </select> -->
                     <div class="formButtn">
 
-                        <button class="btn  btn-primary" (click)="onSearchClick(searchForm)">{{"Search"|translate}}</button>
+                        <button class="btn btn-primary" (click)="onSearchClick(searchForm)">{{"Search"|translate}}</button>
 
                     </div>
                 </form>
@@ -28,7 +28,7 @@
             <div class="filter showFilter">
                 <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
                   <li class="nav-item">
-                    <a class="nav-link" id="pills-lang-tab" data-toggle="pill" href="#pills-lang" role="tab"
+                    <a class="nav-link active" id="pills-lang-tab" data-toggle="pill" href="#pills-lang" role="tab"
                         aria-controls="pills-lang" aria-selected="false">{{"Language"|translate}}</a>
                 </li>
                   <li class="nav-item">
