--- a/src/app/pages/admin/edit-user/edit-user.component.html
+++ b/src/app/pages/admin/edit-user/edit-user.component.html
@@ -17,6 +17,28 @@
           <div class="row">
             <div class="col-lg-6 col-md-6">
             <div class="ui search focus mt-30 lbel25">
+              <label>{{"First Name"|translate}}</label>
+              <div class="ui left icon input swdh19">
+
+              <input maxlength="120" type="text" class="prompt srch_explore ng-untouched ng-pristine ng-valid form-control" placeholder="{{"FirstName"|translate}}">
+              <div class="badge_num2">
+                {{ 120}} </div>
+        </div>
+            </div>
+          </div>
+            <div class="col-lg-6 col-md-6">
+            <div class="ui search focus mt-30 lbel25">
+              <label>{{"Last Name"|translate}}</label>
+              <div class="ui left icon input swdh19">
+
+              <input maxlength="120" type="text" class="prompt srch_explore ng-untouched ng-pristine ng-valid form-control" placeholder="{{"LastName"|translate}}">
+              <div class="badge_num2">
+                {{ 120}} </div>
+        </div>
+            </div>
+          </div>
+            <div class="col-lg-6 col-md-6">
+            <div class="ui search focus mt-30 lbel25">
               <label>{{"Email"|translate}}</label>
               <div class="ui left icon input swdh19">
 
