--- a/src/app/pages/admin/managment-user/managment-user.component.html
+++ b/src/app/pages/admin/managment-user/managment-user.component.html
@@ -81,18 +81,13 @@
                 <td class="text-center">
                   <a *ngIf="!user._blocked" (click)="onBlockClick(user)" title="Block" class="reject-btn noborder  mx-2"><i class="uil uil-times"></i></a>
                   <a *ngIf="user._blocked" (click)="onUnblockClick(user)" title="Unblock" class="accept-btn noborder mx-2"><i class="uil uil-check"></i></a>
-                  <a  title="Reset Password" class="gray-s"><i class="icon-resetPassword"></i></a>
-                  <a  title="Reset Device Student " class="gray-s"><i class="icon-resetDevice"></i></a>
-                  <a (click)="onEditClick()" title="Edit" class="gray-s"><i class="uil uil-edit-alt"></i></a>
+                  <a  (click)="onResetUserPasswordClick(user)" title="Reset Password" class="gray-s"><i class="icon-resetPassword"></i></a>
+                  <a (click)="onResetUserDeviceClick(user)" title="Reset Device Student " class="gray-s"><i class="icon-resetDevice"></i></a>
+                  <!-- <a (click)="onEditClick(user)" title="Edit" class="gray-s"><i class="uil uil-edit-alt"></i></a> -->
+                 
                  <a >
                     <label class="switch togglebuttn">
-                    <input type="checkbox" >
-                    <span class="slider round"></span>
-                  </label>
-                  </a>
-                 <a >
-                    <label class="switch togglebuttn">
-                    <input type="checkbox" checked>
+                    <input (click)="activeDeactivateUserClick($event,user)" type="checkbox" [checked]=user._active>
                     <span class="slider round"></span>
                   </label>
                   </a>
