--- a/src/app/pages/user/checkout/checkout.component.html
+++ b/src/app/pages/user/checkout/checkout.component.html
@@ -92,7 +92,7 @@
                             0192848473839
                         </div>
                     </div> -->
-                    <div class="membership_chk_bg paymentMethod">
+                    <!-- <div class="membership_chk_bg paymentMethod">
                       <div class="checkout_title">
                           <h4>{{"Select Payment Method" | translate}}</h4>
                           <img src="assets/images/line.svg" alt="">
@@ -115,7 +115,6 @@
                                   </div>
                                   <div class="col-md-4">
                                     <label>{{"Expiration Month"|translate}}</label>
-                                    <!-- <input type="text" class="form-control" placeholder="First name"> -->
                                   <select>
                                     <option value="{{'Expiration Month'|translate}}" disabled>{{"Expiration Month"|translate}}</option>
                                     <option value="{{'saturday'|translate}}">{{"saturday"|translate}}</option>
@@ -161,7 +160,6 @@
                                   </div>
                                   <div class="col-md-4">
                                     <label>{{"Expiration Month"|translate}}</label>
-                                    <!-- <input type="text" class="form-control" placeholder="First name"> -->
                                   <select>
                                     <option value="{{'Expiration Month'|translate}}" disabled>{{"Expiration Month"|translate}}</option>
                                     <option value="{{'saturday'|translate}}">{{"saturday"|translate}}</option>
@@ -201,7 +199,6 @@
                                 </div>
                                 <div class="col-md-4">
                                   <label>{{"Expiration Month"|translate}}</label>
-                                  <!-- <input type="text" class="form-control" placeholder="First name"> -->
                                 <select>
                                   <option value="{{'Expiration Month'|translate}}" disabled>{{"Expiration Month"|translate}}</option>
                                   <option value="{{'saturday'|translate}}">{{"saturday"|translate}}</option>
@@ -225,7 +222,7 @@
                         </div>
                       </div>
 
-                  </div>
+                  </div> -->
                     <div class="membership_chk_bg orderDetails">
                         <div class="chckout_order_dt">
                             <div class="checkout_title">
