--- a/src/app/pages/admin/managment-user/managment-user.component.html
+++ b/src/app/pages/admin/managment-user/managment-user.component.html
@@ -83,7 +83,7 @@
                   <a *ngIf="user._blocked" (click)="onUnblockClick(user)" title="{{'Unblock' | translate}}" class="accept-btn noborder mx-2"><i class="uil uil-check"></i></a>
                   <a  (click)="onResetUserPasswordClick(user)" title="{{'Reset Password' | translate}}" class="gray-s"><i class="icon-resetPassword"></i></a>
                   <a (click)="onResetUserDeviceClick(user)" title="{{'Reset Device Student' | translate}} " class="gray-s"><i class="icon-resetDevice"></i></a>
-                  <!-- <a (click)="onEditClick(user)" title="Edit" class="gray-s"><i class="uil uil-edit-alt"></i></a> -->
+                  <a (click)="onEditClick(user)" title="Edit" class="gray-s"><i class="uil uil-edit-alt"></i></a>
                  
                  <a >
                     <label class="switch togglebuttn">
