--- a/src/app/pages/user/checkout/checkout.component.html
+++ b/src/app/pages/user/checkout/checkout.component.html
@@ -92,7 +92,7 @@
                             0192848473839
                         </div>
                     </div> -->
-                    <!-- <div class="membership_chk_bg paymentMethod">
+                    <div class="membership_chk_bg paymentMethod">
                       <div class="checkout_title">
                           <h4>{{"Select Payment Method" | translate}}</h4>
                           <img src="assets/images/line.svg" alt="">
@@ -105,37 +105,42 @@
                               <form>
                                 <div class="row">
                                   <div class="col-md-6">
-                                    <label>{{"Holder Name"|translate}}</label>
-                                    <input type="text" class="form-control" placeholder="Holder Name">
+                                    <label>{{"Card Number"|translate}}</label>
+                                    <input type="text" class="form-control" placeholder="Card Number">
                                   </div>
                                   <div class="col-md-6">
-                                    <label>{{"Card Name"|translate}}</label>
+                                    <label>{{"Holder Name"|translate}}</label>
 
-                                    <input type="text" class="form-control" placeholder="Card Name">
+                                    <input type="text" class="form-control" placeholder="Holder Name">
                                   </div>
                                   <div class="col-md-4">
                                     <label>{{"Expiration Month"|translate}}</label>
-                                  <select>
-                                    <option value="{{'Expiration Month'|translate}}" disabled>{{"Expiration Month"|translate}}</option>
-                                    <option value="{{'saturday'|translate}}">{{"saturday"|translate}}</option>
-                                    <option value="{{'sunday'|translate}}">{{"sunday"|translate}}</option>
-                                    <option value="{{'Monday'|translate}}">{{"Monday"|translate}}</option>
-                                    <option value="{{'Tuesday'|translate}}">{{"Tuesday"|translate}}</option>
-                                    <option value="{{'Wednesday'|translate}}">{{"Wednesday"|translate}}</option>
-                                    <option value="{{'Thursday'|translate}}">{{"Thursday"|translate}}</option>
+                                  <select  >
+                                    <option value="{{'Expiration Month'|translate}}" >{{"Expiration Month"|translate}}</option>
+                                    <option value="{{'January'|translate}}">{{"January"|translate}}</option>
+                                    <option value="{{'February'|translate}}">{{"February"|translate}}</option>
+                                    <option value="{{'March'|translate}}">{{"March"|translate}}</option>
+                                    <option value="{{'April'|translate}}">{{"April"|translate}}</option>
+                                    <option value="{{'May'|translate}}">{{"May"|translate}}</option>
+                                    <option value="{{'June'|translate}}">{{"June"|translate}}</option>
+                                    <option value="{{'July'|translate}}">{{"July"|translate}}</option>
+                                    <option value="{{'September'|translate}}">{{"September"|translate}}</option>
+                                    <option value="{{'October'|translate}}">{{"October"|translate}}</option>
+                                    <option value="{{'November'|translate}}">{{"November"|translate}}</option>
+                                    <option value="{{'December'|translate}}">{{"December"|translate}}</option>
                                   </select>
                                   </div>
                                   <div class="col-md-4">
-                                    <label>{{"Expiration Year"|translate}}
+                                    <label>{{"Expiration Day"|translate}}
                                     </label>
 
-                                    <input type="text" class="form-control" placeholder="Last name">
+                                    <input type="text" class="form-control" placeholder="Expiration Day">
                                   </div>
                                   <div class="col-md-4">
-                                    <label>Expiration Year
+                                    <label>{{"CVC"|translate}}
                                      </label>
 
-                                    <input type="text" class="form-control" placeholder="Last name">
+                                    <input type="text" class="form-control" placeholder="152">
                                   </div>
                                 </div>
                               </form>
@@ -147,82 +152,18 @@
 
 
                             <tab heading="Fawery">
-                              <form>
-                                <div class="row">
-                                  <div class="col-md-6">
-                                    <label>{{"Holder Name"|translate}}</label>
-                                    <input type="text" class="form-control" placeholder="Holder Name">
-                                  </div>
-                                  <div class="col-md-6">
-                                    <label>{{"Card Name"|translate}}</label>
 
-                                    <input type="text" class="form-control" placeholder="Card Name">
-                                  </div>
-                                  <div class="col-md-4">
-                                    <label>{{"Expiration Month"|translate}}</label>
-                                  <select>
-                                    <option value="{{'Expiration Month'|translate}}" disabled>{{"Expiration Month"|translate}}</option>
-                                    <option value="{{'saturday'|translate}}">{{"saturday"|translate}}</option>
-                                    <option value="{{'sunday'|translate}}">{{"sunday"|translate}}</option>
-                                    <option value="{{'Monday'|translate}}">{{"Monday"|translate}}</option>
-                                    <option value="{{'Tuesday'|translate}}">{{"Tuesday"|translate}}</option>
-                                    <option value="{{'Wednesday'|translate}}">{{"Wednesday"|translate}}</option>
-                                    <option value="{{'Thursday'|translate}}">{{"Thursday"|translate}}</option>
-                                  </select>
-                                  </div>
-                                  <div class="col-md-4">
-                                    <label>{{"Expiration Year"|translate}}
-                                    </label>
-
-                                    <input type="text" class="form-control" placeholder="Last name">
-                                  </div>
-                                  <div class="col-md-4">
-                                    <label>Expiration Year
-                                     </label>
-
-                                    <input type="text" class="form-control" placeholder="Last name">
-                                  </div>
-                                </div>
-                              </form>
 
                             </tab>
-                            <tab heading="offline Payment">                              <form>
-                              <div class="row">
-                                <div class="col-md-6">
-                                  <label>{{"Holder Name"|translate}}</label>
-                                  <input type="text" class="form-control" placeholder="Holder Name">
-                                </div>
-                                <div class="col-md-6">
-                                  <label>{{"Card Name"|translate}}</label>
 
-                                  <input type="text" class="form-control" placeholder="Card Name">
-                                </div>
-                                <div class="col-md-4">
-                                  <label>{{"Expiration Month"|translate}}</label>
-                                <select>
-                                  <option value="{{'Expiration Month'|translate}}" disabled>{{"Expiration Month"|translate}}</option>
-                                  <option value="{{'saturday'|translate}}">{{"saturday"|translate}}</option>
-                                  <option value="{{'sunday'|translate}}">{{"sunday"|translate}}</option>
-                                  <option value="{{'Monday'|translate}}">{{"Monday"|translate}}</option>
-                                  <option value="{{'Tuesday'|translate}}">{{"Tuesday"|translate}}</option>
-                                  <option value="{{'Wednesday'|translate}}">{{"Wednesday"|translate}}</option>
-                                  <option value="{{'Thursday'|translate}}">{{"Thursday"|translate}}</option>
-                                </select>
-                                </div>
-                                <div class="col-md-4">
-                                  <label>{{"Expiration Year"|translate}}
-                                  </label>
+                            <tab heading="offline Payment">
 
-                                  <input type="text" class="form-control" placeholder="Last name">
-                                </div>
-
-                              </div>
-                            </form></tab>
+                          </tab>
                           </tabset>
                         </div>
                       </div>
 
-                  </div> -->
+                  </div>
                     <div class="membership_chk_bg orderDetails">
                         <div class="chckout_order_dt">
                             <div class="checkout_title">
